<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.MainActivity">


    <androidx.core.widget.NestedScrollView
        android:id="@+id/weatherBlock"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintTop_toTopOf="parent">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <androidx.constraintlayout.widget.ConstraintLayout
                android:id="@+id/dateBlock"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@color/backgroundUpper"
                app:layout_constraintTop_toTopOf="parent">

                <TextView
                    android:id="@+id/tvDateNumber"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="20dp"
                    android:layout_marginTop="64dp"
                    android:layout_marginBottom="40dp"
                    android:fontFamily="@font/sf_pro"
                    android:text="@string/_29"
                    android:textColor="@android:color/white"
                    android:textSize="48sp"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent" />

                <TextView
                    android:id="@+id/tvDateMonth"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="8dp"
                    android:fontFamily="@font/sf_pro"
                    android:text="@string/month_nyear"
                    android:textColor="@android:color/white"
                    android:textSize="16sp"
                    app:layout_constraintBottom_toBottomOf="@id/tvDateNumber"
                    app:layout_constraintStart_toEndOf="@id/tvDateNumber"
                    app:layout_constraintTop_toTopOf="@id/tvDateNumber" />


            </androidx.constraintlayout.widget.ConstraintLayout>

            <TextView
                android:id="@+id/location"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="20dp"
                android:layout_marginTop="20dp"
                android:drawablePadding="4dp"
                android:fontFamily="@font/sf_pro"
                android:text="@string/belfast"
                android:textColor="@android:color/black"
                android:textSize="16sp"
                app:drawableStartCompat="@drawable/ic_location"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/dateBlock" />

            <ImageView
                android:id="@+id/image_weather"
                android:layout_width="50dp"
                android:layout_height="50dp"
                android:layout_marginStart="24dp"
                android:layout_marginTop="30dp"
                android:src="@drawable/ic_littlecolud"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/location" />

            <androidx.constraintlayout.widget.ConstraintLayout
                android:id="@+id/temp_now_block"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="20dp"
                app:layout_constraintStart_toStartOf="@+id/image_weather"
                app:layout_constraintTop_toBottomOf="@id/image_weather">

                <TextView
                    android:id="@+id/now_tv"
                    style="@style/weather_block_style_small"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/now"
                    android:textColor="@android:color/black"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent" />

                <TextView
                    android:id="@+id/temp_num"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="16dp"
                    android:fontFamily="@font/sf_pro"
                    android:text="@string/_24"
                    android:maxLength="4"
                    android:textColor="@android:color/black"
                    android:textSize="24sp"
                    app:layout_constraintStart_toStartOf="@+id/now_tv"
                    app:layout_constraintTop_toBottomOf="@+id/now_tv" />

                <TextView
                    android:id="@+id/temp_desc"
                    style="@style/weather_block_desc_small"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="4dp"
                    app:layout_constraintStart_toStartOf="@+id/temp_num"
                    app:layout_constraintTop_toBottomOf="@+id/temp_num" />

            </androidx.constraintlayout.widget.ConstraintLayout>

            <androidx.constraintlayout.widget.ConstraintLayout
                android:id="@+id/today_block"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="24dp"
                app:layout_constraintStart_toEndOf="@id/temp_now_block"
                app:layout_constraintTop_toTopOf="@id/temp_now_block">

                <TextView
                    android:id="@+id/today_tv"
                    style="@style/weather_block_style_small"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/today"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent" />

                <TextView
                    android:id="@+id/temp_max"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="16dp"
                    android:fontFamily="@font/sf_pro"
                    android:text="@string/_28"
                    android:textColor="@android:color/black"
                    android:textSize="24sp"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@id/today_tv" />

                <TextView
                    android:id="@+id/max_temp"
                    style="@style/weather_block_desc_small"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="4dp"
                    android:text="@string/max"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/temp_max" />

                <TextView
                    android:id="@+id/min_number"
                    style="@style/weather_block_desc_small"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="8dp"
                    android:text="@string/_21"
                    android:textSize="24sp"
                    app:layout_constraintBottom_toBottomOf="@+id/temp_max"
                    app:layout_constraintStart_toEndOf="@+id/temp_max"
                    app:layout_constraintTop_toTopOf="@+id/temp_max" />

                <TextView
                    android:id="@+id/min_tv"
                    style="@style/weather_block_desc_small"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="4dp"
                    android:text="@string/min"
                    app:layout_constraintStart_toStartOf="@id/min_number"
                    app:layout_constraintTop_toBottomOf="@+id/min_number" />


            </androidx.constraintlayout.widget.ConstraintLayout>

            <TextView
                android:id="@+id/this_week"
                style="@style/weather_block_style_other"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="20dp"
                android:text="@string/this_week"
                app:layout_constraintStart_toStartOf="@+id/temp_now_block"
                app:layout_constraintTop_toBottomOf="@+id/temp_now_block" />

            <androidx.recyclerview.widget.RecyclerView
                android:id="@+id/recycler"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:layout_marginStart="20dp"
                android:layout_marginEnd="20dp"
                app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"
                app:layout_constraintBottom_toTopOf="@id/left_char"
                app:layout_constraintStart_toStartOf="@id/this_week"
                app:layout_constraintTop_toBottomOf="@id/this_week" />

            <androidx.constraintlayout.widget.ConstraintLayout
                android:id="@+id/left_char"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="118dp"
                android:layout_marginStart="20dp"
                app:layout_constraintEnd_toStartOf="@id/left_char"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/this_week">

                <TextView
                    android:id="@+id/wind"
                    style="@style/weather_block_style_other"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/wind"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent" />

                <TextView
                    android:id="@+id/wind_num"
                    style="@style/characteristic_font"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="16dp"
                    android:text="@string/sw_4m_s"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/wind" />

                <TextView
                    android:id="@+id/humidity"
                    style="@style/weather_block_style_other"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="20dp"
                    android:text="@string/humidity"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/wind_num" />

                <TextView
                    android:id="@+id/humidity_num"
                    style="@style/characteristic_font"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="16dp"
                    android:text="@string/_80"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/humidity" />

                <TextView
                    android:id="@+id/sunrise"
                    style="@style/weather_block_style_other"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="20dp"
                    android:text="@string/sunrise"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/humidity_num" />

                <TextView
                    android:id="@+id/sunrise_num"
                    style="@style/characteristic_font"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="16dp"
                    android:layout_marginBottom="20dp"
                    android:text="@string/nope"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/sunrise" />


            </androidx.constraintlayout.widget.ConstraintLayout>

            <androidx.constraintlayout.widget.ConstraintLayout
                android:id="@+id/right_char"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toEndOf="@+id/left_char"
                app:layout_constraintTop_toTopOf="@id/left_char">

                <TextView
                    android:id="@+id/pressure"
                    style="@style/weather_block_style_other"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/pressure"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent" />


                <TextView
                    android:id="@+id/pressure_num"
                    style="@style/characteristic_font"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="16dp"
                    android:text="@string/nope"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/pressure" />

                <TextView
                    android:id="@+id/cloudiness"
                    style="@style/weather_block_style_other"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="20dp"
                    android:text="@string/cloudiness"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/pressure_num" />

                <TextView
                    android:id="@+id/cloudiness_num"
                    style="@style/characteristic_font"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="16dp"
                    android:text="@string/nope"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/cloudiness" />

                <TextView
                    android:id="@+id/sunset"
                    style="@style/weather_block_style_other"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="20dp"
                    android:text="@string/sunset"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/cloudiness_num" />

                <TextView
                    android:id="@+id/sunset_num"
                    style="@style/characteristic_font"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="16dp"
                    android:text="@string/nope"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/sunset" />


            </androidx.constraintlayout.widget.ConstraintLayout>

        </androidx.constraintlayout.widget.ConstraintLayout>


    </androidx.core.widget.NestedScrollView>


</androidx.constraintlayout.widget.ConstraintLayout>